--- a/progetto/src/utilities/.eslintrc.json
+++ b/progetto/src/utilities/.eslintrc.json
@@ -4,9 +4,10 @@
     },
     "rules": {
         // Override our default settings just for this directory
-        "eqeqeq": "warn",
+        "eqeqeq": "off",
         "strict": "off",
         "aspects": [ "noHref", "invalidHref", "preferButton" ],
+        "no-unused-vars":"off",
         "jsx-a11y/anchor-is-valid": [
             "error",
             {
