--- a/progetto/package.json
+++ b/progetto/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "eslint": "^8.19.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
