--- a/progetto/src/utilities/.eslintrc.json
+++ b/progetto/src/utilities/.eslintrc.json
@@ -6,13 +6,12 @@
         // Override our default settings just for this directory
         "eqeqeq": "off",
         "strict": "off",
-     
         "no-unused-vars":0,
         "jsx-a11y/anchor-is-valid": [
             "error",
             {
               "components": ["Link"],
-              "specialLink": ["hrefLeft", "hrefRight"],
+              "specialLink": ["hrefLeft", "hrefRight"]
             }
           ]
     }
