--- a/progetto/package.json
+++ b/progetto/package.json
@@ -7,9 +7,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.1",
     "eslint": "^8.19.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
