--- a/progetto/.env
+++ b/progetto/.env
@@ -1,1 +1,10 @@
 REACT_APP_ENCRYPT_KEY=2e35f2lkdhsoihjgio7eeb74aabc37d5e5d05
+
+
+fill="url(#gradient)"
+
+
+<linearGradient id="gradient">
+      <stop offset="15%" stop-color="#685ecb" />
+      <stop offset="85%" stop-color="#995ec3" />
+    </linearGradient>
